2004-02-06  Mike Kestner  <mkestner@ximian.com>

	* generator/Method.cs : for Opaque/Object retvals, if raw_ret is
	NULL, return null instead of an object with a NULL handle.

2004-02-06  Mike Kestner  <mkestner@ximian.com>

	* glib/time_t_CustomMarshaler.cs : use TimeSpan.TotalSeconds, not
	TimeSpan.Seconds.

2004-02-06  John Luke  <jluke@cfl.rr.com>

	* gtk/Gtk.metadata: hide unneeded RadioMenuItem ctors
	* gtk/RadioMenuItem.custom: add ctor to create a new group
	* gtk/gtk-api.xml: regen

2004-02-04  Mike Kestner  <mkestner@ximian.com>

	* generator/CustomMarshalerGen.cs : impl MarshalReturnType.
	* generator/Method.cs : add CustomMarshalerGen return type handling.
	* generator/Property.cs : rework property type selection. 
	* generator/SymbolTable.cs : add time_t mapping
	* glib/time_t_CustomMarshaler.cs : impl native to managed methods.
	* glue/time_t.c : remove debugging code.

2004-02-03  Mike Kestner  <mkestner@ximian.com>

	* glib/List.cs : add a ctor overload to create empty lists with
	a specific element_type.
	* glib/SList.cs : ditto

2004-02-03  Mike Kestner  <mkestner@ximian.com>

	* glib/Value.cs : remove double free of ManagedValues. Fixes the
	unfiled (cough, tberman, cough) bug in managed types as tree
	store values.

2004-02-03  Mike Kestner  <mkestner@ximian.com>

	* glib/ManagedValue.cs : null check on Free.
	* glib/Value.cs : some ManagedValue rework because we unset now.
	
2004-02-02  Mike Kestner  <mkestner@ximian.com>

	* generator/CustomMarshalerGen.cs : beginnings of a new generatable.
	* generator/SymbolTable.cs : mangle interface keyword to iface.

2004-02-02  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* generator/ClassBase.cs: Converted String uses to the string alias.
	* generator/ConstStringGen.cs: Ditto
	* generator/Ctor.cs: Ditto
	* generator/EnumGen.cs: Ditto
	* generator/ManualGen.cs: Ditto
	* generator/SignalHandler.cs: Ditto
	* generator/StringGen.cs: Ditto
	* sample/Subclass.cs: Added a DeleteEventHandler to the window widget, 