@@ -1,3 +1,9 @@
+2004-02-07  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+
+	* atk/Makefile.in : fix copy/paste error in --assembly-name.
+	* generator/ObjectGen.cs : rework ObjectManager generation code.
+	* glade/Makefile.in : fix copy/paste error in --assembly-name.
+
 2004-02-06  Mike Kestner  <mkestner@ximian.com>
 
 	* generator/Method.cs : for Opaque/Object retvals, if raw_ret is
